# Boxgirl

./: .gitmodules  CMakeLists.txt  README.md
include/: Application.hpp  ResourceManager.hpp
include/Env/: CollisionTracker.hpp  Env.hpp  TaggedData.hpp
include/Env/Components/: AnimatedSprite.hpp  Body.hpp  Components.hpp  ControllablePlayer.hpp  Drawable.hpp  GenericUpdateable.hpp  Tilemap.hpp  Transformable.hpp
include/Env/Entities/: Entities.hpp  Player.hpp  Tilemap.hpp
include/Env/Systems/: GenericUpdate.hpp  GraphicalBodySync.hpp  Physics.hpp  PlayerAnimationUpdate.hpp  PlayerControl.hpp  Render.hpp  Systems.hpp
include/Graphics/: AnimatedSprite.hpp  Tilemap.hpp
include/States/: Game.hpp  Level.hpp  Machine.hpp  State.hpp  States.hpp
resource/maps/: test.json  test.props.json
resource/maps/levels/: 1.props.json
src/: Application.cpp  ResourceManager.cpp
src/Env/: CollisionTracker.cpp  TaggedData.cpp
src/Env/Components/: AnimatedSprite.cpp  Body.cpp  ControllablePlayer.cpp  Drawable.cpp  GenericUpdateable.cpp  Tilemap.cpp  Transformable.cpp
src/Env/Entities/: Player.cpp  Tilemap.cpp
src/Env/Systems/: GenericUpdate.cpp  GraphicalBodySync.cpp  Physics.cpp  PlayerAnimationUpdate.cpp  PlayerControl.cpp  Render.cpp
src/Graphics/: AnimatedSprite.cpp  Tilemap.cpp
src/States/: Game.cpp  Level.cpp  Machine.cpp  State.cpp
